fixed info viewheight on mobile

--- a/src/components/info.module.scss
+++ b/src/components/info.module.scss
@@ -19,7 +19,7 @@
 }
 
 .info {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
